added jade template support and lodash (for use in jade templates)

--- a/source/views/haml.haml
+++ b/source/views/haml.haml
@@ -11,7 +11,7 @@
   %body
     .delete-me
       .container
-        %h1 Proteus
+        %h1 Proteus &mdash; HAML
         %p
           You're all set!
           <a href="http://github.com/thoughtbot/proteus-node">Let's get started</a>
