--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -1,18 +1,28 @@
-doctype html
-html
-  head
-    meta(charset='utf-8')
-    meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
-    meta(content='width=device-width, initial-scale=1', name='viewport')
-    title Page Title
-    link(href='assets/stylesheets/application.css', rel='stylesheet', type='text/css')
-  body
-    .delete-me
-      .container
-        h1 Proteus &mdash; Jade
-        p
-          | You're all set!
-          a(href='http://github.com/thoughtbot/proteus-node') Let's get started
-          |           building your prototype.
-    script(src='https://code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
-    script(src='assets/javascripts/application.js', type='text/javascript')
+extends ./partials/_default
+
+append vars
+  - var title = "Proteus &mdash; Jade"
+  - var lodashtest = [1, 2, 3, 3, 1, 1]
+
+append css
+  //- page specific css file links
+
+append scripts
+  //- page specific javascript file links
+
+block content
+  .delete-me
+    .container
+      h1= !{title}
+      p
+        | You're all set!
+      p
+        a(href='http://github.com/thoughtbot/proteus-node') Let's get started building your prototype.
+
+      p Lodash available in Jade/Pug templates.
+
+      p Test array:
+      p [ #{lodashtest} ]
+      
+      p Lodash uniq function result:
+      p= _.uniq(lodashtest)
