--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -13,7 +13,7 @@ append scripts
 block content
   .delete-me
     .container
-      h1= !{title}
+      h1 !{title}
       p
         | You're all set!
       p
@@ -26,3 +26,6 @@ block content
       
       p Lodash uniq function result:
       p= _.uniq(lodashtest)
+
+
+
