added coffeescript filter to jade

--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -28,7 +28,10 @@ block content
         Lodash uniq function result:
       
       p= _.uniq(lodashtest)
-
+      
+      script
+        :coffee-script
+          console.log 'Coffeescript filter functional'
 
 
 
