--- a/source/views/index.jade
+++ b/source/views/index.jade
@@ -13,7 +13,7 @@ append scripts
 block content
   .delete-me
     .container
-
+      .fa.fa-sign-language
       :markdown-it
         # !{title}
         
@@ -27,6 +27,7 @@ block content
             li Test array: [ #{lodashtest} ]
             li Lodash uniq function result: #{_.uniq(lodashtest)}
         li Coffeescript and markdown filters
+        li Font-awesome Icons
 
       script
         :coffee-script
