--- a/source/assets/stylesheets/application.scss
+++ b/source/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import "vendor/normalize";
-
+@import "vendor/font-awesome/font-awesome";
 @import "bourbon";
 @import "neat";
 @import "base/base";
