--- a/source/views/index.pug
+++ b/source/views/index.pug
@@ -14,9 +14,8 @@ block content
   .delete-me
     .container
       .fa.fa-sign-language
+      h1 !{title}
       :markdown-it
-        # !{title}
-        
         ## You're all set!
         
         [Let's get started building your prototype.](href='http://github.com/dpfranklin/proteus-node') 
