fix typo on index

--- a/source/views/index.pug
+++ b/source/views/index.pug
@@ -1,7 +1,7 @@
 extends ./partials/_default
 
 append vars
-  - var title = "Proteus &mdash; Jade"
+  - var title = "Proteus &mdash; Pug"
   - var lodashtest = [1, 2, 3, 3, 1, 1]
 
 append css
