--- a/source/views/partials/_default.pug
+++ b/source/views/partials/_default.pug
@@ -22,5 +22,5 @@ html
 
     block scripts
       script(src='https://code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
-      script(src='assets/javascripts/application.js', type='text/javascript')
+      script(src='assets/javascripts/app.js', type='text/javascript')
 
