minimal webpack implementation

--- a/source/views/index.pug
+++ b/source/views/index.pug
@@ -33,7 +33,7 @@ block content
 
       script
         :coffee-script
-          console.log 'Coffeescript filter functional'
+          console.log 'From on page coffeescript filter'
 
 
 
