--- a/source/views/partials/_default.pug
+++ b/source/views/partials/_default.pug
@@ -11,16 +11,16 @@ html
       meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
       meta(content='width=device-width, initial-scale=1', name='viewport')
       block title
-        title  !{ title }
+        title=  title
 
       block css
-        link(href='assets/stylesheets/application.css', rel='stylesheet', type='text/css')
+        link(href=`${baseurl}/assets/stylesheets/application.css`, rel='stylesheet', type='text/css')
 
   body
 
     block content
 
     block scripts
-      script(src='https://code.jquery.com/jquery-2.1.1.min.js', type='text/javascript')
-      script(src='assets/javascripts/app.js', type='text/javascript')
+      script(src='https://code.jquery.com/jquery-2.1.1.min.js')
+      script(src=`${baseurl}/assets/javascripts/app.js`)
 
