refined/refactored url selection for templates

--- a/source/views/index.pug
+++ b/source/views/index.pug
@@ -14,7 +14,7 @@ block content
   .delete-me
     .container
       .fa.fa-sign-language
-      h1 !{title}
+      h1!= title
       :markdown-it
         ## You're all set!
         
