made app.css and app.js consistent

--- a/source/views/partials/_default.pug
+++ b/source/views/partials/_default.pug
@@ -17,7 +17,7 @@ html
         title=  title
 
       block css
-        link(href=`${css}/application.css`, rel='stylesheet', type='text/css')
+        link(href=`${css}/app.css`, rel='stylesheet', type='text/css')
 
   body
 
