finished up haml-coffee intergration

--- a/source/views/index.pug
+++ b/source/views/index.pug
@@ -24,7 +24,7 @@ block content
         * [Font-awesome Icons](http://fontawesome.io/icons/)
         * [Bourbon/Neat Sass Mixin Library](http://bourbon.io/) 
         * [Lodash available in Jade/Pug templates.](https://lodash.com/)
-        * [Link to a HAML compiled page](http://localhost:8000/haml.html)
+        * [Link to a HAML compiled page](http://localhost:8000/haml/)
       
       ul
         li
